--- a/cmake/Config.cmake.in
+++ b/cmake/Config.cmake.in
@@ -6,6 +6,9 @@ find_dependency(OpenCV)
 find_dependency(Eigen3)
 find_dependency(g2o)
 find_dependency(yaml-cpp)
+if(@spdlog_FOUND@)
+    find_dependency(spdlog)
+endif()
 
 if(@BOW_FRAMEWORK@ MATCHES "DBoW2")
     find_dependency(DBoW2)
