--- a/Dockerfile.desktop
+++ b/Dockerfile.desktop
@@ -8,40 +8,40 @@ RUN set -x && \
   apt-get upgrade -y -qq --no-install-recommends && \
   : "basic dependencies" && \
   apt-get install -y -qq \
-    build-essential \
-    pkg-config \
-    cmake \
-    git \
-    wget \
-    curl \
-    tar \
-    unzip && \
+  build-essential \
+  pkg-config \
+  cmake \
+  git \
+  wget \
+  curl \
+  tar \
+  unzip && \
   : "g2o dependencies" && \
   apt-get install -y -qq \
-    libatlas-base-dev \
-    libsuitesparse-dev \
-    libglew-dev && \
+  libatlas-base-dev \
+  libsuitesparse-dev \
+  libglew-dev && \
   : "OpenCV dependencies" && \
   apt-get install -y -qq \
-    libgtk-3-dev \
-    libjpeg-dev \
-    libpng++-dev \
-    libtiff-dev \
-    libopenexr-dev \
-    libwebp-dev \
-    ffmpeg \
-    libavcodec-dev \
-    libavformat-dev \
-    libavutil-dev \
-    libswscale-dev \
-    libtbb-dev && \
+  libgtk-3-dev \
+  libjpeg-dev \
+  libpng++-dev \
+  libtiff-dev \
+  libopenexr-dev \
+  libwebp-dev \
+  ffmpeg \
+  libavcodec-dev \
+  libavformat-dev \
+  libavutil-dev \
+  libswscale-dev \
+  libtbb-dev && \
   : "backward-cpp dependencies" && \
   apt install -y -qq binutils-dev && \
   : "other dependencies" && \
   apt-get install -y -qq \
-    libyaml-cpp-dev \
-    sqlite3 \
-    libsqlite3-dev && \
+  libyaml-cpp-dev \
+  sqlite3 \
+  libsqlite3-dev && \
   : "remove cache" && \
   apt-get autoremove -y -qq && \
   rm -rf /var/lib/apt/lists/*
@@ -69,9 +69,9 @@ RUN set -x && \
   mkdir -p build && \
   cd build && \
   cmake \
-    -DCMAKE_BUILD_TYPE=Release \
-    -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} \
-    .. && \
+  -DCMAKE_BUILD_TYPE=Release \
+  -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} \
+  .. && \
   make -j${NUM_THREADS} && \
   make install && \
   cd /tmp && \
@@ -88,18 +88,18 @@ RUN set -x && \
   mkdir -p build && \
   cd build && \
   cmake \
-    -DCMAKE_BUILD_TYPE=Release \
-    -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} \
-    -DBUILD_SHARED_LIBS=ON \
-    -DBUILD_UNITTESTS=OFF \
-    -DG2O_USE_CHOLMOD=OFF \
-    -DG2O_USE_CSPARSE=ON \
-    -DG2O_USE_OPENGL=OFF \
-    -DG2O_USE_OPENMP=OFF \
-    -DG2O_BUILD_APPS=OFF \
-    -DG2O_BUILD_EXAMPLES=OFF \
-    -DG2O_BUILD_LINKED_APPS=OFF \
-    .. && \
+  -DCMAKE_BUILD_TYPE=Release \
+  -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} \
+  -DBUILD_SHARED_LIBS=ON \
+  -DBUILD_UNITTESTS=OFF \
+  -DG2O_USE_CHOLMOD=OFF \
+  -DG2O_USE_CSPARSE=ON \
+  -DG2O_USE_OPENGL=OFF \
+  -DG2O_USE_OPENMP=OFF \
+  -DG2O_BUILD_APPS=OFF \
+  -DG2O_BUILD_EXAMPLES=OFF \
+  -DG2O_BUILD_LINKED_APPS=OFF \
+  .. && \
   make -j${NUM_THREADS} && \
   make install && \
   cd /tmp && \
@@ -117,26 +117,26 @@ RUN set -x && \
   mkdir -p build && \
   cd build && \
   cmake \
-    -DCMAKE_BUILD_TYPE=Release \
-    -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} \
-    -DBUILD_DOCS=OFF \
-    -DBUILD_EXAMPLES=OFF \
-    -DBUILD_JASPER=OFF \
-    -DBUILD_OPENEXR=OFF \
-    -DBUILD_PERF_TESTS=OFF \
-    -DBUILD_TESTS=OFF \
-    -DBUILD_PROTOBUF=OFF \
-    -DBUILD_opencv_apps=OFF \
-    -DBUILD_opencv_dnn=OFF \
-    -DBUILD_opencv_ml=OFF \
-    -DBUILD_opencv_python_bindings_generator=OFF \
-    -DENABLE_CXX11=ON \
-    -DENABLE_FAST_MATH=ON \
-    -DWITH_EIGEN=ON \
-    -DWITH_FFMPEG=ON \
-    -DWITH_TBB=ON \
-    -DWITH_OPENMP=ON \
-    .. && \
+  -DCMAKE_BUILD_TYPE=Release \
+  -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} \
+  -DBUILD_DOCS=OFF \
+  -DBUILD_EXAMPLES=OFF \
+  -DBUILD_JASPER=OFF \
+  -DBUILD_OPENEXR=OFF \
+  -DBUILD_PERF_TESTS=OFF \
+  -DBUILD_TESTS=OFF \
+  -DBUILD_PROTOBUF=OFF \
+  -DBUILD_opencv_apps=OFF \
+  -DBUILD_opencv_dnn=OFF \
+  -DBUILD_opencv_ml=OFF \
+  -DBUILD_opencv_python_bindings_generator=OFF \
+  -DENABLE_CXX11=ON \
+  -DENABLE_FAST_MATH=ON \
+  -DWITH_EIGEN=ON \
+  -DWITH_FFMPEG=ON \
+  -DWITH_TBB=ON \
+  -DWITH_OPENMP=ON \
+  .. && \
   make -j${NUM_THREADS} && \
   make install && \
   cd /tmp && \
@@ -153,27 +153,27 @@ RUN set -x && \
   mkdir -p build && \
   cd build && \
   cmake \
-    -DCMAKE_BUILD_TYPE=Release \
-    -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} \
-    -DBUILD_EXAMPLES=OFF \
-    -DBUILD_PANGOLIN_DEPTHSENSE=OFF \
-    -DBUILD_PANGOLIN_FFMPEG=OFF \
-    -DBUILD_PANGOLIN_LIBDC1394=OFF \
-    -DBUILD_PANGOLIN_LIBJPEG=OFF \
-    -DBUILD_PANGOLIN_LIBOPENEXR=OFF \
-    -DBUILD_PANGOLIN_LIBPNG=OFF \
-    -DBUILD_PANGOLIN_LIBTIFF=OFF \
-    -DBUILD_PANGOLIN_LIBUVC=OFF \
-    -DBUILD_PANGOLIN_LZ4=OFF \
-    -DBUILD_PANGOLIN_OPENNI=OFF \
-    -DBUILD_PANGOLIN_OPENNI2=OFF \
-    -DBUILD_PANGOLIN_PLEORA=OFF \
-    -DBUILD_PANGOLIN_PYTHON=OFF \
-    -DBUILD_PANGOLIN_TELICAM=OFF \
-    -DBUILD_PANGOLIN_UVC_MEDIAFOUNDATION=OFF \
-    -DBUILD_PANGOLIN_V4L=OFF \
-    -DBUILD_PANGOLIN_ZSTD=OFF \
-    .. && \
+  -DCMAKE_BUILD_TYPE=Release \
+  -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} \
+  -DBUILD_EXAMPLES=OFF \
+  -DBUILD_PANGOLIN_DEPTHSENSE=OFF \
+  -DBUILD_PANGOLIN_FFMPEG=OFF \
+  -DBUILD_PANGOLIN_LIBDC1394=OFF \
+  -DBUILD_PANGOLIN_LIBJPEG=OFF \
+  -DBUILD_PANGOLIN_LIBOPENEXR=OFF \
+  -DBUILD_PANGOLIN_LIBPNG=OFF \
+  -DBUILD_PANGOLIN_LIBTIFF=OFF \
+  -DBUILD_PANGOLIN_LIBUVC=OFF \
+  -DBUILD_PANGOLIN_LZ4=OFF \
+  -DBUILD_PANGOLIN_OPENNI=OFF \
+  -DBUILD_PANGOLIN_OPENNI2=OFF \
+  -DBUILD_PANGOLIN_PLEORA=OFF \
+  -DBUILD_PANGOLIN_PYTHON=OFF \
+  -DBUILD_PANGOLIN_TELICAM=OFF \
+  -DBUILD_PANGOLIN_UVC_MEDIAFOUNDATION=OFF \
+  -DBUILD_PANGOLIN_V4L=OFF \
+  -DBUILD_PANGOLIN_ZSTD=OFF \
+  .. && \
   make -j${NUM_THREADS} && \
   make install && \
   cd /tmp && \
@@ -190,9 +190,9 @@ RUN set -x && \
   mkdir -p build && \
   cd build && \
   cmake \
-    -DCMAKE_BUILD_TYPE=Release \
-    -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} \
-    .. && \
+  -DCMAKE_BUILD_TYPE=Release \
+  -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} \
+  .. && \
   make -j${NUM_THREADS} && \
   make install && \
   cd /tmp && \
@@ -205,13 +205,13 @@ RUN set -x && \
   mkdir -p build && \
   cd build && \
   cmake \
-    -DCMAKE_BUILD_TYPE=RelWithDebInfo \
-    .. && \
+  -DCMAKE_BUILD_TYPE=RelWithDebInfo \
+  .. && \
   make -j${NUM_THREADS} && \
   make install && \
   rm -rf CMakeCache.txt CMakeFiles Makefile cmake_install.cmake example src && \
   chmod -R 777 ./*
-
+COPY . .
 ARG PANGOLIN_VIEWER_COMMIT=f3564675d420bcdbe6380b29b5e2f2b623987dd0
 WORKDIR /tmp
 RUN set -x && \
@@ -222,15 +222,15 @@ RUN set -x && \
   mkdir -p build && \
   cd build && \
   cmake \
-    -DCMAKE_BUILD_TYPE=RelWithDebInfo \
-    -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} \
-    .. && \
+  -DCMAKE_BUILD_TYPE=RelWithDebInfo \
+  -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} \
+  .. && \
   make -j${NUM_THREADS} && \
   make install && \
   cd /tmp && \
   rm -rf *
 
-ARG EXAMPLES_COMMIT=b86009e2ed004f275c5bacd48e7c641a722914e1
+ARG EXAMPLES_COMMIT=1c0433867cba5d110fd94bbc609468650a2f7885
 WORKDIR /
 RUN set -x && \
   git clone https://github.com/stella-cv/stella_vslam_examples.git && \
@@ -240,11 +240,19 @@ RUN set -x && \
   mkdir -p build && \
   cd build && \
   cmake \
-    -DCMAKE_BUILD_TYPE=RelWithDebInfo \
-    -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} \
-    -DUSE_STACK_TRACE_LOGGER=ON \
-    .. && \
+  -DCMAKE_BUILD_TYPE=RelWithDebInfo \
+  -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} \
+  -DUSE_STACK_TRACE_LOGGER=ON \
+  .. && \
   make -j${NUM_THREADS}
 
+
 WORKDIR /stella_vslam_examples/build/
-ENTRYPOINT ["/bin/bash"]
+
+RUN pip3 install --upgrade pip
+RUN pip3 install -r requirements.txt
+COPY processor .
+
+CMD ["python3", "./processor/t60_processor.py"]
+
+# ENTRYPOINT ["/bin/bash"]
