--- a/Dockerfile.desktop
+++ b/Dockerfile.desktop
@@ -206,6 +206,7 @@ RUN set -x && \
   cd build && \
   cmake \
     -DCMAKE_BUILD_TYPE=RelWithDebInfo \
+    -DBUILD_TESTS=ON \
     .. && \
   make -j${NUM_THREADS} && \
   make install && \
