--- a/Dockerfile.desktop
+++ b/Dockerfile.desktop
@@ -201,17 +201,17 @@ RUN set -x && \
 # stella_vslam
 COPY . /stella_vslam/
 WORKDIR /stella_vslam/
-RUN set -x && \
-  mkdir -p build && \
-  cd build && \
-  cmake \
-    -DCMAKE_BUILD_TYPE=RelWithDebInfo \
-    -DBUILD_TESTS=ON \
-    .. && \
-  make -j${NUM_THREADS} && \
-  make install && \
-  rm -rf CMakeCache.txt CMakeFiles Makefile cmake_install.cmake example src && \
-  chmod -R 777 ./*
+# RUN set -x && \
+#   mkdir -p build && \
+#   cd build && \
+  # cmake \
+  #   -DCMAKE_BUILD_TYPE=RelWithDebInfo \
+  #   -DBUILD_TESTS=ON \
+  #   .. && \
+#   make -j${NUM_THREADS} && \
+#   make install && \
+#   rm -rf CMakeCache.txt CMakeFiles Makefile cmake_install.cmake example src && \
+#   chmod -R 777 ./*
 
 # ARG PANGOLIN_VIEWER_COMMIT=f3564675d420bcdbe6380b29b5e2f2b623987dd0
 # WORKDIR /tmp
