--- a/Dockerfile.desktop
+++ b/Dockerfile.desktop
@@ -201,51 +201,51 @@ RUN set -x && \
 # stella_vslam
 COPY . /stella_vslam/
 WORKDIR /stella_vslam/
-# RUN set -x && \
-#   mkdir -p build && \
-#   cd build && \
+RUN set -x && \
+  mkdir -p build && \
+  cd build && \
   cmake \
     -DCMAKE_BUILD_TYPE=RelWithDebInfo \
     -DBUILD_TESTS=ON \
     .. && \
-#   make -j${NUM_THREADS} && \
-#   make install && \
-#   rm -rf CMakeCache.txt CMakeFiles Makefile cmake_install.cmake example src && \
-#   chmod -R 777 ./*
+  make -j${NUM_THREADS} && \
+  make install && \
+  rm -rf CMakeCache.txt CMakeFiles Makefile cmake_install.cmake example src && \
+  chmod -R 777 ./*
 
-# ARG PANGOLIN_VIEWER_COMMIT=f3564675d420bcdbe6380b29b5e2f2b623987dd0
-# WORKDIR /tmp
-# RUN set -x && \
-#   git clone https://github.com/stella-cv/pangolin_viewer.git && \
-#   cd pangolin_viewer && \
-#   git checkout -q ${PANGOLIN_VIEWER_COMMIT} && \
-#   git submodule update --init --recursive && \
-#   mkdir -p build && \
-#   cd build && \
-#   cmake \
-#     -DCMAKE_BUILD_TYPE=RelWithDebInfo \
-#     -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} \
-#     .. && \
-#   make -j${NUM_THREADS} && \
-#   make install && \
-#   cd /tmp && \
-#   rm -rf *
+ARG PANGOLIN_VIEWER_COMMIT=f3564675d420bcdbe6380b29b5e2f2b623987dd0
+WORKDIR /tmp
+RUN set -x && \
+  git clone https://github.com/stella-cv/pangolin_viewer.git && \
+  cd pangolin_viewer && \
+  git checkout -q ${PANGOLIN_VIEWER_COMMIT} && \
+  git submodule update --init --recursive && \
+  mkdir -p build && \
+  cd build && \
+  cmake \
+    -DCMAKE_BUILD_TYPE=RelWithDebInfo \
+    -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} \
+    .. && \
+  make -j${NUM_THREADS} && \
+  make install && \
+  cd /tmp && \
+  rm -rf *
 
-# ARG EXAMPLES_COMMIT=b86009e2ed004f275c5bacd48e7c641a722914e1
-# WORKDIR /
-# RUN set -x && \
-#   git clone https://github.com/stella-cv/stella_vslam_examples.git && \
-#   cd stella_vslam_examples && \
-#   git checkout -q ${EXAMPLES_COMMIT} && \
-#   git submodule update --init --recursive && \
-#   mkdir -p build && \
-#   cd build && \
-#   cmake \
-#     -DCMAKE_BUILD_TYPE=RelWithDebInfo \
-#     -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} \
-#     -DUSE_STACK_TRACE_LOGGER=ON \
-#     .. && \
-#   make -j${NUM_THREADS}
+ARG EXAMPLES_COMMIT=b86009e2ed004f275c5bacd48e7c641a722914e1
+WORKDIR /
+RUN set -x && \
+  git clone https://github.com/stella-cv/stella_vslam_examples.git && \
+  cd stella_vslam_examples && \
+  git checkout -q ${EXAMPLES_COMMIT} && \
+  git submodule update --init --recursive && \
+  mkdir -p build && \
+  cd build && \
+  cmake \
+    -DCMAKE_BUILD_TYPE=RelWithDebInfo \
+    -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} \
+    -DUSE_STACK_TRACE_LOGGER=ON \
+    .. && \
+  make -j${NUM_THREADS}
 
 # WORKDIR /stella_vslam_examples/build/
 WORKDIR /stella_vslam/build/test
