Parameterize margins for projection matcher

--- a/example/euroc/EuRoC_stereo.yaml
+++ b/example/euroc/EuRoC_stereo.yaml
@@ -86,6 +86,7 @@ Mapping:
 Tracking:
   backend: "g2o"
   enable_temporal_keyframe_only_tracking: false
+  margin_last_frame_projection: 10.0
 
 KeyframeInserter:
   wait_for_local_bundle_adjustment: false
