--- a/example/tum_vi/TUM_VI_stereo.yaml
+++ b/example/tum_vi/TUM_VI_stereo.yaml
@@ -114,6 +114,9 @@ StereoRectifier:
 # Tracking Parameters #
 #=====================#
 
+Tracking:
+  margin_last_frame_projection: 10.0
+
 Preprocessing:
   min_size: 800
 
