--- a/example/kitti/KITTI_stereo_04-12.yaml
+++ b/example/kitti/KITTI_stereo_04-12.yaml
@@ -32,6 +32,9 @@ Camera:
 # Tracking Parameters #
 #=====================#
 
+Tracking:
+  margin_last_frame_projection: 10.0
+
 Preprocessing:
   min_size: 800
 
