--- a/example/tum_rgbd/TUM_RGBD_rgbd_1.yaml
+++ b/example/tum_rgbd/TUM_RGBD_rgbd_1.yaml
@@ -32,6 +32,9 @@ Camera:
 # Tracking Parameters #
 #=====================#
 
+Tracking:
+  margin_local_map_projection: 10.0
+
 Preprocessing:
   min_size: 800
   depthmap_factor: 5000.0 # Note: Set it to 1.0 for the rosbag format data set.
