Parametrize grid size for keypt_indices_in_cells_

--- a/example/euroc/EuRoC_mono.yaml
+++ b/example/euroc/EuRoC_mono.yaml
@@ -56,6 +56,8 @@ LoopDetector:
 
 System:
   map_format: "msgpack"
+  num_grid_cols: 47
+  num_grid_rows: 30
 
 PangolinViewer:
   keyframe_size: 0.07
