--- a/example/euroc/EuRoC_stereo.yaml
+++ b/example/euroc/EuRoC_stereo.yaml
@@ -102,6 +102,8 @@ Initializer:
 
 System:
   map_format: "msgpack"
+  num_grid_cols: 47
+  num_grid_rows: 30
 
 PangolinViewer:
   keyframe_size: 0.07
