Build with Tracy if needed

--- a/cmake/Config.cmake.in
+++ b/cmake/Config.cmake.in
@@ -9,6 +9,9 @@ find_dependency(yaml-cpp)
 if(@spdlog_FOUND@)
     find_dependency(spdlog)
 endif()
+if(@Tracy_FOUND@)
+    find_dependency(Tracy)
+endif()
 
 if(@BOW_FRAMEWORK@ MATCHES "DBoW2")
     find_dependency(DBoW2)
