Aruco nano support
This patch add support for using the aruco nano header file
(https://sourceforge.net/projects/aruco/files/ArucoNano-v5/) to
detect markers. The user can enable the support using a CMake
config setting, and then use "aruconano" as marker model.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -141,6 +141,11 @@ else()
     message(STATUS "aruco: disabled")
 endif()
 
+option(USE_ARUCO_NANO "Compile with aruco nano support" OFF)
+if (USE_ARUCO_NANO)
+    add_definitions(-DUSE_ARUCO_NANO)
+endif()
+
 # spdlog
 find_package(spdlog QUIET)
 if(spdlog_FOUND)
