--- a/src/stella_vslam/marker_detector/CMakeLists.txt
+++ b/src/stella_vslam/marker_detector/CMakeLists.txt
@@ -8,6 +8,13 @@ target_sources(${PROJECT_NAME}
                "$<$<NOT:$<BOOL:${USE_ARUCO}>>:${CMAKE_CURRENT_SOURCE_DIR}/aruco_disabled.cc>"
                )
 
+if (USE_ARUCO_NANO)
+    target_sources(${PROJECT_NAME}
+	           PRIVATE
+                   ${CMAKE_CURRENT_SOURCE_DIR}/aruconano.h
+                   ${CMAKE_CURRENT_SOURCE_DIR}/aruconano.cc)
+endif()
+
 # Install headers
 file(GLOB HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
 install(FILES ${HEADERS}
