--- a/src/stella_vslam/marker_model/CMakeLists.txt
+++ b/src/stella_vslam/marker_model/CMakeLists.txt
@@ -6,6 +6,13 @@ target_sources(${PROJECT_NAME}
                ${CMAKE_CURRENT_SOURCE_DIR}/base.h
                ${CMAKE_CURRENT_SOURCE_DIR}/base.cc)
 
+if (USE_ARUCO_NANO)
+    target_sources(${PROJECT_NAME}
+                   PRIVATE
+                   ${CMAKE_CURRENT_SOURCE_DIR}/aruconano.h
+                   ${CMAKE_CURRENT_SOURCE_DIR}/aruconano.cc)
+endif()
+
 # Install headers
 file(GLOB HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
 install(FILES ${HEADERS}
