Refactoring and some minor fixes
- Delete references from markers when erasing keyframes
- required_keyframes_for_marker_initialization can now be set individusually in KeyframeInseter and Initialiser

--- a/src/stella_vslam/module/CMakeLists.txt
+++ b/src/stella_vslam/module/CMakeLists.txt
@@ -5,6 +5,7 @@ target_sources(${PROJECT_NAME}
                ${CMAKE_CURRENT_SOURCE_DIR}/relocalizer.h
                ${CMAKE_CURRENT_SOURCE_DIR}/frame_tracker.h
                ${CMAKE_CURRENT_SOURCE_DIR}/keyframe_inserter.h
+               ${CMAKE_CURRENT_SOURCE_DIR}/marker_initializer.h
                ${CMAKE_CURRENT_SOURCE_DIR}/two_view_triangulator.h
                ${CMAKE_CURRENT_SOURCE_DIR}/local_map_cleaner.h
                ${CMAKE_CURRENT_SOURCE_DIR}/local_map_updater.h
@@ -14,6 +15,7 @@ target_sources(${PROJECT_NAME}
                ${CMAKE_CURRENT_SOURCE_DIR}/relocalizer.cc
                ${CMAKE_CURRENT_SOURCE_DIR}/frame_tracker.cc
                ${CMAKE_CURRENT_SOURCE_DIR}/keyframe_inserter.cc
+               ${CMAKE_CURRENT_SOURCE_DIR}/marker_initializer.cc
                ${CMAKE_CURRENT_SOURCE_DIR}/two_view_triangulator.cc
                ${CMAKE_CURRENT_SOURCE_DIR}/local_map_cleaner.cc
                ${CMAKE_CURRENT_SOURCE_DIR}/local_map_updater.cc
