accept multiple extractors and add akaze extractor

--- a/src/stella_vslam/data/CMakeLists.txt
+++ b/src/stella_vslam/data/CMakeLists.txt
@@ -11,7 +11,7 @@ target_sources(${PROJECT_NAME}
                ${CMAKE_CURRENT_SOURCE_DIR}/marker2d.h
                ${CMAKE_CURRENT_SOURCE_DIR}/graph_node.h
                ${CMAKE_CURRENT_SOURCE_DIR}/camera_database.h
-               ${CMAKE_CURRENT_SOURCE_DIR}/orb_params_database.h
+               ${CMAKE_CURRENT_SOURCE_DIR}/params_database.h
                ${CMAKE_CURRENT_SOURCE_DIR}/map_database.h
                ${CMAKE_CURRENT_SOURCE_DIR}/bow_database.h
                ${CMAKE_CURRENT_SOURCE_DIR}/frame_statistics.h
@@ -24,7 +24,7 @@ target_sources(${PROJECT_NAME}
                ${CMAKE_CURRENT_SOURCE_DIR}/marker2d.cc
                ${CMAKE_CURRENT_SOURCE_DIR}/graph_node.cc
                ${CMAKE_CURRENT_SOURCE_DIR}/camera_database.cc
-               ${CMAKE_CURRENT_SOURCE_DIR}/orb_params_database.cc
+               ${CMAKE_CURRENT_SOURCE_DIR}/params_database.cc
                ${CMAKE_CURRENT_SOURCE_DIR}/map_database.cc
                ${CMAKE_CURRENT_SOURCE_DIR}/bow_database.cc
                ${CMAKE_CURRENT_SOURCE_DIR}/frame_statistics.cc)
