AKAZE and ORB working, SIFT needs more work

--- a/src/stella_vslam/feature/CMakeLists.txt
+++ b/src/stella_vslam/feature/CMakeLists.txt
@@ -13,6 +13,8 @@ target_sources(${PROJECT_NAME}
                ${CMAKE_CURRENT_SOURCE_DIR}/sift_extractor.h
                ${CMAKE_CURRENT_SOURCE_DIR}/akaze_extractor.h
                ${CMAKE_CURRENT_SOURCE_DIR}/orb_impl.h
+               ${CMAKE_CURRENT_SOURCE_DIR}/feature_type.h
+               ${CMAKE_CURRENT_SOURCE_DIR}/params.cc
                ${CMAKE_CURRENT_SOURCE_DIR}/orb_params.cc
                ${CMAKE_CURRENT_SOURCE_DIR}/sift_params.cc
                ${CMAKE_CURRENT_SOURCE_DIR}/akaze_params.cc
