fix marker_detector install directory name

--- a/src/stella_vslam/marker_detector/CMakeLists.txt
+++ b/src/stella_vslam/marker_detector/CMakeLists.txt
@@ -18,4 +18,4 @@ endif()
 # Install headers
 file(GLOB HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
 install(FILES ${HEADERS}
-        DESTINATION ${STELLA_VSLAM_INCLUDE_INSTALL_DIR}/module)
+        DESTINATION ${STELLA_VSLAM_INCLUDE_INSTALL_DIR}/marker_detector)
